# crabos

./: Cargo.toml  Makefile  Makefile.old  Readme.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  register.rs  serial.rs  sysinfo.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/arch/x86_64/: boot.asm
src/memory/: area_frame_allocator.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
