[package]
name = "crabos"
version = "0.1.0"
authors = ["Joe Becher <me@drazisil.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiboot2 = "0.15.1"
pic8259_simple = "0.2.0"
spin = "0.9.6"
uart_16550 = "0.2.18"
volatile = "0.4.6"
x86_64 = "0.14.10"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]
