[package]
name = "crabos"
version = "0.1.0"
authors = ["Joe Becher <me@drazisil.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiboot2 = "0.19.0"
pic8259_simple = "0.2.0"
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.5.1"
x86_64 = "0.15.0"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]
